--- a/package.json
+++ b/package.json
@@ -17,16 +17,23 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
+    "@graphql-tools/merge": "^9.0.4",
+    "@hookform/resolvers": "^3.9.0",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "framer-motion": "^11.3.24",
     "graphql": "^16.9.0",
     "graphql-tag": "^2.12.6",
+    "jsonwebtoken": "^9.0.2",
     "next": "14.2.5",
     "pg": "^8.12.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.52.2"
+    "react-hook-form": "^7.52.2",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20",
     "@types/pg": "^8.11.6",
     "@types/react": "^18",
