--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "framer-motion": "^11.3.24",
     "graphql": "^16.9.0",
     "graphql-tag": "^2.12.6",
+    "jose": "^5.6.3",
     "jsonwebtoken": "^9.0.2",
     "next": "14.2.5",
     "pg": "^8.12.0",
