--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@emotion/styled": "^11.13.0",
     "@graphql-tools/merge": "^9.0.4",
     "@hookform/resolvers": "^3.9.0",
+    "@vercel/postgres": "^0.9.0",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "framer-motion": "^11.3.24",
@@ -32,6 +33,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.2",
+    "uuidv4": "^6.2.13",
     "zod": "^3.23.8"
   },
   "devDependencies": {
