--- a/package.json
+++ b/package.json
@@ -26,9 +26,12 @@
     "framer-motion": "^11.3.24",
     "graphql": "^16.9.0",
     "graphql-tag": "^2.12.6",
+    "i": "^0.3.7",
     "jose": "^5.6.3",
+    "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "next": "14.2.5",
+    "npm": "^10.8.2",
     "pg": "^8.12.0",
     "react": "^18",
     "react-dom": "^18",
@@ -37,6 +40,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20",
     "@types/pg": "^8.11.6",
