--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@emotion/styled": "^11.13.0",
     "@graphql-tools/merge": "^9.0.4",
     "@hookform/resolvers": "^3.9.0",
-    "@vercel/postgres": "^0.9.0",
+    "@neondatabase/serverless": "^0.9.4",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "framer-motion": "^11.3.24",
